--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,15 @@
+:root {
+    --color1: #f9fafb;
+    --color2: #e5e7eb;
+}
+@font-face {
+    font-family: calibri;
+    src: url(./calibri-regular.ttf);
+}
 html {
     font-size: 1vh;
+    background-color: var(--color1);
+    font-family: calibri;
 }
 html * {
     box-sizing: border-box;
@@ -10,22 +20,28 @@ html, body {
 body {
     margin: 0;
 }
-
+button {
+    font-family: calibri;
+}
 .header {
-    background-color: red;
+    background-color: var(--color1);
     height: 12%;
 
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    gap: 1rem;
+    box-shadow: 0 0 5px 1px rgb(145, 145, 145);
+    position: relative;
+    z-index: 1;
+
 }
 .header svg {
     width: 6rem;
 }
 .header .text {
     font-size: 6rem;;
-    background-color: green;
 }
 
 
@@ -34,21 +50,25 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: var(--color2);
 }
 .gameContainer .game {
     width: min(95vw, 65vh);
     height: min(95vw, 65vh);
-    background-color: purple;
+    background-color: var(--color1);
+    box-shadow: 0 0 5px 1px rgb(145, 145, 145);
+    border-radius: 15px;
 }
 
 .options {
-    background-color: blue;
+    background-color: var(--color1);
     height: 15%;
     display: flex;
     align-items: center;
     justify-content: center;
     padding-left: 4vw;
     padding-right: 4vw;
+    box-shadow: 0 0 5px 1px rgb(145, 145, 145);
 }
 .options button {
     height: 50%;
