--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     --color1: #f9fafb;
     --color2: #e5e7eb;
     --color3: #6b7280;
-    --shadow: 0 0 5px 1px rgb(189, 189, 189);
+    --shadow: 0 0 3px 1px rgb(189, 189, 189);
 }
 @font-face {
     font-family: calibri;
@@ -28,10 +28,12 @@ button {
     cursor: pointer;
     font-weight: bold;
 }
+
+
+/* HEADER */
 .header {
     background-color: var(--color1);
     height: 12%;
-
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -49,15 +51,15 @@ button {
     font-size: 6rem;;
 }
 
-
-.gameContainer {
+/* MAIN CONTENT */
+.main {
     height: 73%;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: var(--color2);
 }
-.gameContainer .game {
+.main .game {
     width: min(95vw, 65vh);
     height: min(95vw, 65vh);
     background-color: var(--color1);
@@ -65,7 +67,9 @@ button {
     border-radius: 15px;
 }
 
-.play {
+
+/* FOOTER */
+.footer {
     background-color: var(--color1);
     height: 15%;
     display: flex;
@@ -88,26 +92,27 @@ button {
     background-color: var(--color1);
     color: var(--color3);
 }
-form {
+
+
+
+/* GAME OPTIONS */
+.options {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
     top: 0px;
     z-index: 2;
-
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
     visibility: hidden;
- 
 }
-form.active {
+.options.active {
     visibility: visible;
 }
-form .main {
+.optionsBtns {
     width:min(95vw, 50vh);
     height: 55%;
     background-color: var(--color2);
@@ -116,6 +121,6 @@ form .main {
     transition: 0.2s ease-in-out;
 }
 
-form .main.active {
+.optionsBtns.active {
     transform: scale(1);
 }
