--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
     --shadow: 0 0 3px 1px rgb(189, 189, 189);
     --player : #3b82f6;
     --computer: #8b5cf6;
+    --text: #262626;
 }
 @font-face {
     font-family: calibri;
@@ -14,6 +15,7 @@ html {
     font-size: 1vh;
     background-color: var(--color1);
     font-family: calibri;
+    color: var(--text);
 }
 html * {
     box-sizing: border-box;
@@ -50,6 +52,9 @@ button {
 .header svg {
     width: 6rem;
 }
+.header path {
+    fill: var(--text);
+}
 .header .text {
     font-size: 6rem;;
 }
@@ -68,8 +73,33 @@ button {
     background-color: var(--color1);
     box-shadow: var(--shadow);
     border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+/* GAME BOARD */
+.gameBoard {
+    background-color: var(--text);
+    width: 90%;
+    height: 90%;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2px;
 
+}
+.cell {
+    width: 100%;
+    height: 100%;
+    background-color: var(--color1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.xo {
+    font-weight: bold;
+    font-size: max(10rem, 7vw);
+}
 
 /* FOOTER */
 .footer {
@@ -173,3 +203,4 @@ button {
 #closeOptionsBtn:active {
     font-size: 2.5rem;
 }
+
